# $Id$

Griffith ChangeLog
------------------
(c) 2005-2009  Vasco Nunes, Piotr Ożarowski


2009-04-06  Michael Jahn
	* [#348226] DVD Empire lookup problem

2009-04-05  Michael Jahn
	* [#269907] PluginMovieFilmDb.py: list index out of range
	  and complete update of the plugin with test data

2009-04-02  Michael Jahn
	* IMDB-de plugin updated

2009-03-29  Michael Jahn
	* [#224546] Plot isn't being pulled from IMDB for some movies
	* [#341826] "Country" field from IMDB contains newlines

2009-03-10  Michael Jahn
	* [#337758] 'Titel' and 'Original Titel' get the same content
	  (IMDb-de plugin updated)
	* added HD DVD and Blu-ray to the medium table for new databases

2009-03-03  Michael Jahn
	* Cinematografo movie plugin updated

2009-02-28  Michael Jahn
	* screenplay, cameraman, resolution and barcode added to Search-For section in preferences

2009-02-24  Michael Jahn
	* Amazon posters: removing of temporary files fixed

2009-02-12  Piotr Ożarowski
	* Add new default tag: "Buy me"

2009-02-11  Piotr Ożarowski
	* Version changed to 0.10-beta3~svn
	* Backup function fixed
	* PostgreSQL/MySQL backup support added

---- 0.10-beta2 ----

2009-02-10  Piotr Ożarowski
	* Fix upgrading from v2 to v4 (columns that are not available yet, are not used)
	* Releasing 0.10-beta2

2009-02-07  Michael Jahn
	* CineMovies movie plugin updated

2009-02-05  Michael Jahn
	* AniDB movie plugin updated

2009-02-01  Piotr Ożarowski
	* Add interactive shell (--shell commandline option)
	* Add barcode column to the movie table
	* Add resolution (width and height columns) to the movie table
	* Change default type of runtime and year to SmallInteger

2009-01-31  Michael Jahn
	* Allocine movie plugin updated
	* small unicode fixes for 7arte movie plugin

2009-01-28  Michael Jahn
	* FilmAffinity movie plugin updated

2009-01-24  Michael Jahn
	* DVD-Palace movie plugin updated

2009-01-22  Michael Jahn
	* fixed Greek translation of the word "Danish" (thanks to Johnny)
